--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,21 @@ apply plugin: 'war'
 apply plugin: 'jetty'
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
 dependencies {
-    compile "javax.ws.rs:jsr311-api:1.1.1"
+ 	compile "javax.ws.rs:jsr311-api:1.1.1"
 
-    compile 'com.sun.jersey:jersey-server:1.19'
-    compile 'com.sun.jersey:jersey-core:1.19'
-    compile 'com.sun.jersey:jersey-servlet:1.19'
-    compile 'com.sun.jersey:jersey-json:1.19'
-
+	compile 'com.sun.jersey:jersey-server:1.19'
+	compile 'com.sun.jersey:jersey-core:1.19'
+	compile 'com.sun.jersey:jersey-servlet:1.19'
+	compile 'com.sun.jersey:jersey-json:1.19'
 	compile 'com.google.code.gson:gson:2.3.1'
 
-    testCompile "junit:junit-dep:4.10"
+	testCompile "junit:junit-dep:4.10"
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = 2.5
 }
